--- a/basic_hms/views/medical_appointment.xml
+++ b/basic_hms/views/medical_appointment.xml
@@ -28,6 +28,7 @@
                     <group>
                         <group>
                             <field name="doctor_id"/>
+                            <field name="consulta"/>
                             <field name="appointment_date"/>
                             <field name="appointment_end"/>
                             <field name="patient_status"/>
