--- a/basic_hms/views/medical_patient.xml
+++ b/basic_hms/views/medical_patient.xml
@@ -36,6 +36,9 @@
                             </group>
 
                             <group>
+                                <field name="partner_phone" /> <!--Añado campo relacionado de contactos -->
+                                <field name="partner_mobile"/> <!--Añado campo relacionado de contactos -->
+                                <field name="partner_email"/> <!--Añado campo relacionado de contactos -->                                    
                                 <field name="sex" />
                                 <field name="age" readonly="1" />
                                 <field name="partner_address_id" invisible="1"/>
