--- a/basic_hms/views/medical_patient.xml
+++ b/basic_hms/views/medical_patient.xml
@@ -33,6 +33,8 @@
                                 <field name="name" />
                                 <field name="date_of_birth" />
                                 <field name="marital_status" />
+                                <field name="date_admitted"/>
+                                <field name="origin"/>
                             </group>
 
                             <group>
