--- a/basic_hms/views/consentimientos_firmados.xml
+++ b/basic_hms/views/consentimientos_firmados.xml
@@ -8,7 +8,7 @@
            <xpath expr="//form[1]/sheet[1]/notebook[1]/page[9]" position="after">
                 <page string="Consentimientos firmados" name="consentimientos_firmados">             
                    <group>
-                        <field name="consent_pdf" string="Consentimientos" widget=many2many_binary/> 
+                        <field name="consent_pdf" string="Consentimientos" widget="many2many_binary"/> 
                    </group>                    
                 </page>
            </xpath>          
