--- a/basic_hms/views/medical_patient.xml
+++ b/basic_hms/views/medical_patient.xml
@@ -31,6 +31,8 @@
                         <group>
                             <group>
                                 <field name="name" />
+                                <field name="nuhsa" />
+                                <field name="nuss" />  
                                 <field name="date_of_birth" />
                                 <field name="marital_status" />
                                 <field name="date_admitted"/>
