--- a/basic_hms/views/medical_patient.xml
+++ b/basic_hms/views/medical_patient.xml
@@ -261,9 +261,8 @@
                                                 <field name="digestions" />
                                                 <field name="dietary_supplement" />
                                                 <field name="coffee" />
-                                                <field name="coffee_cups" />
-                                                <field name="te" />
-                                              <!--  <field name="te_cups" modifiers="{'invisible': [('te', '=', False)]}" /> -->
+                                                <field name="coffee_cups" invisible ="not cofee" required="cofee == 1" />
+                                                <field name="te" />                                              
                                                 <field name="te_cups" invisible ="not te" required="te == 1"/>    
 
                                             </group>
