--- a/basic_hms/views/medical_patient.xml
+++ b/basic_hms/views/medical_patient.xml
@@ -188,8 +188,7 @@
                                 <group string="Gyneco">
                                     <group string="General">
                                         <field name="fertile" />
-                                    <!--    <field name="currently_pregnant" />-->
-                                             <field name="currently_pregnant" invisible ="not sex" required="sex == 1"/>  
+                                        <field name="currently_pregnant" />
                                         <field name="menstrual_cycles" />
                                         <field name="menarche" />
                                         <field name="days_of_menstruation"/>
