--- a/iwesabe_sale_optional_products/views/sale_view.xml
+++ b/iwesabe_sale_optional_products/views/sale_view.xml
@@ -7,7 +7,7 @@
 			<field name="inherit_id" ref="sale.view_order_form" />
 			<field name="arch" type="xml">
                 <xpath expr="//field[@name='order_line']//tree//field[@name='product_template_id']" position="after">
-                    <button name="fetch_optional_products" type="object" icon="fa-th-large" style="color:green;" string=""  />
+                    <button name="fetch_optional_products" type="object" icon="fa-th-large" style="color:green;" string="BOTON-FCB"  />
                 </xpath>
             </field>
         </record>
